tests/ui/parser/issues/issue-63116.rs
// fixed by #66361
//~v ERROR this file contains an unclosed delimiter
impl W <s(f;Y(;]
